--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ src="https://www.facebook.com/tr?id=1159835692877957&ev=PageView&noscript=1"
         </h1>
         <div class="w-full mt-6 flex justify-center">
             <div class="logo-bg">
-                <img src="https://raw.githubusercontent.com/online1343/benstokes/c0b594378a64440baf3aca845cc186eb72997430/IMG_8796.PNG" alt="Logo" class="w-32 md:w-40 rounded-full">
+                <img src="https://raw.githubusercontent.com/online1343/alokbhai/ac3b9bbc7f0bd8fca4ade8544dfef578c25684f8/photo_2025-10-03_13-05-38.jpg" alt="Logo" class="w-32 md:w-40 rounded-full">
             </div>
         </div>
 
