--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '822234273600251');
 fbq('track', 'PageView');
+fbq('track', 'Subscribe');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=822234273600251&ev=PageView&noscript=1"
@@ -69,7 +70,6 @@ src="https://www.facebook.com/tr?id=822234273600251&ev=PageView&noscript=1"
     👇 Join and Watch Upcoming Toss and Match 👇
 </h2>
         <a href="https://t.me/+nMVc8QYER_EwMTk9" class="mt-6 ">
-            <onclick="fbq('track','subscribe');">
             <button class="button-82-pushable button-bounce px-6 py-3 bg-green-600 shadow-lg shadow-red-500 border-white border rounded-lg shadow-lg hover:bg-red-600 transition">
                 <span class="flex items-center gap-2 text-lg font-bold">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-telegram" viewBox="0 0 16 16">
